<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    tools:context=".ForgetPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/forget_password_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/forget_password_icon"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/forgot" />

        <TextView
            android:id="@+id/forget_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/forget_password_1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/forget_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/forget_password_details"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forget_password_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_email"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/lightWhite"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forget_password_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_email"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/next_btn"
        android:textColor="@color/black" />


    </LinearLayout>

    </ScrollView>

</FrameLayout>